Fixed an issue where the teaser was cut off in related posts

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -40,6 +40,18 @@ html {
   }
 }
 
+// Archive
+.grid__item {
+  .archive__item-teaser {
+    @include breakpoint($small) {
+      max-height: none;
+    }
+    @include breakpoint($medium) {
+      max-height: none;
+    }
+  }
+}
+
 // Search
 .search-content {
   .archive__item-teaser {
